--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "author": "Aaron Blankstein <aaron@blankstein.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@ledgerhq/hw-app-btc": "^4.21.0",
+    "@ledgerhq/hw-transport-node-hid": "^4.22.0",
+    "babel-runtime": "^6.26.0",
     "bigi": "^1.4.2",
-    "blockstack": "^18.0.2",
+    "bitcoinjs-lib": "^4.0.1",
+    "blockstack": "^18.0.4",
+    "varuint-bitcoin": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0"
   },
