--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "name": "blockstack-ledger",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Simple utility for Blockstack ledger transactions",
-  "main": "index.js",
   "scripts": {
     "build": "rm -rf lib; babel src -d lib",
+    "browserify": "browserify lib/index.js --standalone bsk-trezor -o dist/blockstack-trezor.js",
     "start": "node lib/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint src/"
   },
-  "author": "Aaron Blankstein <aaron@blankstein.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blockstack/blockstack-ledger-signer.git"
+  },
+  "author": {
+    "name": "Blockstack PBC",
+    "email": "admin@blockstack.com",
+    "url": "https://blockstack.org"
+  },
+  "contributors": [
+    {
+      "name": "Aaron Blankstein"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "@ledgerhq/hw-app-btc": "^4.21.0",
-    "@ledgerhq/hw-transport-node-hid": "^4.22.0",
     "babel-runtime": "^6.26.0",
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^4.0.1",
-    "blockstack": "^18.0.4",
+    "blockstack": "^18.0.2",
     "varuint-bitcoin": "^1.1.0"
   },
   "devDependencies": {
@@ -27,6 +39,6 @@
     "babel-preset-flow": "^6.23.0"
   },
   "engines": {
-    "node": ">=9"
+    "node": ">=8"
   }
 }
