--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@ledgerhq/hw-app-btc": "^4.21.0",
+    "ablankstein-ledger-hw-app-btc": "^4.21.0",
     "babel-runtime": "^6.26.0",
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^4.0.1",
