--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0"
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^5.6.1",
+    "eslint-plugin-flowtype": "^2.50.3"
   },
   "engines": {
     "node": ">=8"
