--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "blockstack-ledger",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Simple utility for Blockstack ledger transactions",
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "rm -rf lib; babel src -d lib",
     "browserify": "browserify lib/index.js --standalone bsk-ledger -o dist/blockstack-ledger.js",
     "start": "node lib/index.js",
-    "test": "eslint src/"
+    "flow": "flow",
+    "lint": "eslint src/",
+    "test": "npm run lint && npm run flow"
   },
   "repository": {
     "type": "git",
@@ -39,7 +42,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^5.6.1",
-    "eslint-plugin-flowtype": "^2.50.3"
+    "eslint-plugin-flowtype": "^2.50.3",
+    "flow-bin": "^0.82.0"
   },
   "engines": {
     "node": ">=8"
