--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockstack-ledger",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Simple utility for Blockstack ledger transactions",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -9,7 +9,11 @@
     "start": "node lib/index.js",
     "flow": "flow",
     "lint": "eslint src/",
-    "test": "npm run lint && npm run flow"
+    "build-test": "npm run build && rm -rf tests/lib && babel tests/src -d tests/lib",
+    "type": "npm run lint && npm run flow",
+    "test": "npm run build-test && node tests/lib/index.js",
+    "record-mocks": "npm run build-test && node tests/lib/recordMocks.js",
+    "play-mocks": "npm run build-test && node tests/lib/playMocks.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +31,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "ablankstein-ledger-hw-app-btc": "^4.21.0",
+    "ablankstein-ledger-hw-app-btc": "^4.22.0",
     "babel-runtime": "^6.26.0",
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^4.0.1",
@@ -35,6 +39,8 @@
     "varuint-bitcoin": "^1.1.0"
   },
   "devDependencies": {
+    "@ledgerhq/hw-transport-mocker": "^4.24.0",
+    "@ledgerhq/hw-transport-node-hid": "^4.24.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -43,7 +49,9 @@
     "babel-preset-flow": "^6.23.0",
     "eslint": "^5.6.1",
     "eslint-plugin-flowtype": "^2.50.3",
-    "flow-bin": "^0.82.0"
+    "fetch-mock": "^7.0.7",
+    "flow-bin": "^0.82.0",
+    "tape": "^4.9.1"
   },
   "engines": {
     "node": ">=8"
