--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockstack-ledger",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "Simple utility for Blockstack ledger transactions",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -36,6 +36,7 @@
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^4.0.1",
     "blockstack": "^18.1.0",
+    "rwlock": "^5.0.0",
     "varuint-bitcoin": "^1.1.0"
   },
   "devDependencies": {
